# xclaw-ag-tool-guard

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
src/xclaw_ag_tool_guard/: __init__.py  config.py  detector.py  interceptor.py  py.typed
src/xclaw_ag_tool_guard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_tool_guard.py
